working on animation montage enemy stagger onhit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,14 +53,14 @@ r.Mobile.UseLegacyShadingModel=True
 DefaultPVRTCQuality=2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/SunTemple
+EditorStartupMap=/Game/Maps/SunTemple.SunTemple
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/SunTemple
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Game/Maps/SunTemple
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
