--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -53,7 +53,7 @@ r.Mobile.UseLegacyShadingModel=True
 DefaultPVRTCQuality=2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/SunTemple.SunTemple
+EditorStartupMap=/Game/Maps/Level1.Level1
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
